# google-agent-experiments

./: .gitignore  Makefile  README.md  docker-compose.yml
agent-tools-mcp/: .env.example  Dockerfile  README.md  pyproject.toml
agent-tools-mcp/agent_tools_mcp/: code_interpreter.py  main.py  search_tools.py  settings.py
agent-tools-mcp/scripts/: run_server.sh
agent-tools-mcp/tests/: test_tools.py
agent-tools-mcp/tests/test_data/: complex_script.py
agents-core/: .env.example  example.py  pyproject.toml  requirements.txt  setup.py
agents-core/agents_core/: __init__.py  actor_agent.py  base_agent.py  cli.py  config.py  critic_agent.py  search_agent.py
agents-core/docs/: MCP_INTEGRATION.md
agents-core/experiments/: cli_search_example.py  introspect_client.py
agents-core/tests/: test_actor_agent_integration.py  test_actor_critic_agents.py
brave-search-mcp/: Dockerfile  README.md  minimal_script.py  pyproject.toml  run_server.sh
brave-search-mcp/brave_search_mcp/: __init__.py  main.py  settings.py
