[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-core"
version = "0.1.0"
description = "Core package for agents project with modular architecture"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.12.2",
]

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100

# Assume Python 3.12+
target-version = "py312"

# Enable auto-fixing for all fixable rules
fix = true

# Show fixes in output
show-fixes = true

[tool.ruff.lint]
# Enable common linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

# Ignore specific rules if needed
ignore = [
    "E501",  # Line too long (handled by line-length setting)
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["agents_core"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false
